# newfreebitcoins-mono

./: .gitignore  AUDIT.md  CLI_NODE_SETUP.md  FIXES_SCOPE.md  README.md  install.sh  package-lock.json  package.json  turbo.json  vulns.md
apps/backend/: package.json  tsconfig.json
apps/backend/src/: appRuntime.ts  config.ts  index.ts
apps/backend/src/database/: createConnection.ts
apps/backend/src/database/models/: Donor.ts  FaucetRequest.ts  OAuthRequestState.ts  types.ts
apps/backend/src/lib/: bitcoin.ts  donations.ts  electrum.ts  esplora.ts  faucetRequestCache.ts  xOAuth.ts
apps/backend/src/routes/: commonRoutes.ts  debugRoutes.ts  donationRoutes.ts  faucetRoutes.ts  index.ts  middleware.ts  walletRoutes.ts
apps/backend/src/types/: electrum-client.d.ts
apps/donor-cli/: Cargo.toml
apps/donor-cli/src/: main.rs
apps/frontend/: package.json
apps/frontend/client/: donate.html
apps/frontend/client/donate/: index.html
apps/frontend/client/scripts/: api.js  config.js
apps/frontend/client/scripts/pages/: donate.js  faucet-request.js  stats.js
apps/frontend/scripts/: build-donate-bundle.mjs
