[package]
name = "donor-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10"
anyhow = "1"
base64 = "0.22"
bitcoin = { version = "0.32", features = ["serde", "rand-std"] }
bip39 = { version = "2", features = ["rand"] }
clap = { version = "4.5", features = ["derive"] }
dirs = "6"
hex = "0.4"
pbkdf2 = "0.12"
rand = "0.8"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
rpassword = "7"
secp256k1 = { version = "0.29", features = ["global-context"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
